<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/icon_menu_play_game"
            android:title="@string/nav_title_play" />
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/icon_menu_score"
            android:title="@string/nav_title_score" />
        <item
            android:id="@+id/nav_create_question"
            android:icon="@drawable/icon_menu_add_question"
            android:title="@string/nav_title_create_question" />
    </group>

    <item android:title="Parameters">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_title_settings" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_send"
                android:title="Info" />
        </menu>
    </item>

</menu>
